fixed overflowing on float page

--- a/Lab2/float.css
+++ b/Lab2/float.css
@@ -17,6 +17,7 @@ body {
 
 .header-div {
   background-color: #222831;
+  height: 75px;
 }
 
 .menu-list {
@@ -62,13 +63,9 @@ body {
   background-position: 0 50%;
   background-image: linear-gradient(blue 50%, yellow 50%);
   transition: 0.5s cubic-bezier(0.14, 0.6, 0.67, 0.93);
-  
+
   float: right;
   font-weight: 500;
-}
-.content {
-  display: table-cell;
-  vertical-align: middle;
 }
 
 #last:hover {
@@ -78,7 +75,116 @@ body {
   background-position: 0 50%;
 }
 
+#last > div {
+  display: table-cell;
+  vertical-align: middle;
+}
+
 .menu-item img {
   margin: 10px;
   vertical-align: middle;
+}
+
+main {
+  min-height: calc(100vh - 175px);
+  width: 100%;
+  position: relative;
+}
+table {
+  table-layout: fixed;
+  position: absolute;
+  text-align: center;
+  height: 100%;
+  float: left;
+  width: 72%;
+  border-spacing: 0;
+  background-color: slategrey;
+}
+
+.side-scroll {
+  width: 20%;
+  text-align: center;
+  background-color: #393e46;
+  border-right: 1px solid whitesmoke;
+  font-size: 21px;
+  vertical-align: top;
+}
+.copy-links {
+  transition: 0.6s ease-in;
+  text-decoration: none;
+  color: #97b3b8;
+}
+.copy-links:hover {
+  color: #d7f9ff;
+}
+.content-header {
+  background-color: #393e46;
+}
+
+.content-header > h1 {
+  margin: 0;
+}
+
+.side-scroll > ol {
+  list-style-position: outside;
+  display: inline-block;
+}
+.main-content {
+  overflow-wrap: break-word;
+  vertical-align: top;
+  padding: 10px 25px;
+  background-color: #46515c;
+}
+
+.post-author {
+  height: 100px;
+  background-color: #2f4238;
+  font-size: 24px;
+  font-weight: 600;
+  text-align: center;
+}
+
+.map-div {
+  background-color: wheat;
+  min-width: 28%;
+  max-width: 33vw;
+  min-height: calc(100vh - 175px);
+  float: right;
+  position: relative;
+}
+
+iframe {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 100%;
+}
+
+footer {
+  display: table;
+  width: 100%;
+  padding: 15px 20px;
+  min-height: 100px;
+  background: #222831;
+}
+
+footer > div {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.powered-by {
+  text-align: left;
+}
+.media {
+  text-align: center;
+}
+.authors {
+  text-align: right;
+}
+.media > a {
+  text-decoration: none;
+  color: white;
+  font-size: 25px;
+  padding: 0 10px;
 }
